test/test_suite/errors/error_throw.c3
module foo;

errtype Blurg
{
    Z
}

func void main()
{
    int! i = Blurg.Z!;
    int! j = Blurg.Z!;
}